# DBAIS_Hackaton

./: .gitignore  Agents.md  CAREMAP_PROJECT.md  README.md  SCHEMA.md  app.yml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
EDA/: 01_data_overview.md  02_data_quality_issues.md  03_cleaning_route.md  04_schema_and_erd.md  README.md
sample_data/raw_data/: facilities_100.csv  india_post_pincode_directory_100.csv  nfhs_5_district_health_indicators_100.csv
server/: db.ts  index.ts
src/: App.vue  README.md  config.py  style.css
src/api/: facilities.ts  shortlist.ts
src/components/: CandidateCard.vue  DetailPanel.vue  EvidenceItem.vue  FacilityMapModal.vue  GenieWidget.vue  IndicatorTags.vue  ScoreBreakdown.vue  SearchBar.vue  ShortlistDrawer.vue
src/composables/: useSearch.ts  useSession.ts
src/etl/: README.md  config.py
src/etl/notebooks/: 00_setup.py  01_bronze_ingest.py  02_silver_reference.py  03_silver_facilities.py  04_gold_dim_facility.py  05_gold_evidence.py  06_gold_reference.py  07_gold_serving_views.py  08_gold_user_persistence.py  09_lakebase_sync.py  run_all.py
src/notebooks/: 00_setup.py  01_bronze_ingest.py  02_silver_reference.py  03_silver_facilities.py  04_gold_dim_facility.py  05_gold_evidence.py  06_gold_reference.py  07_gold_serving_views.py  08_gold_user_persistence.py
src/seeds/: bridge_care_need_specialty.csv  dim_care_need.csv  dim_specialty.csv
src/types/: index.ts
src/utils/: distance.ts  scoring.ts
